<resources>
    <string name="app_name">DartApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- MenuFragment -->
    <string name="menu_fragment_label">Welcome</string>
    <string name="training">Training</string>
    <string name="stats">Statistics</string>
    <string name="settings">Settings</string>

    <!-- ModesFragment -->
    <string name="modes_fragment_label">Training</string>
    <string name="mode_all">All</string>
    <string name="mode_501_label">501</string>
    <string name="mode_100_attempts_label">100 Attempts</string>
    <string name="mode_cheat_label">Cheat</string>

    <!-- TrainingActivity -->
    <string name="training_activity_label">Training</string>
    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="no_score">No Score</string>
    <string name="last_format">Last: %s</string>
    <string name="avg_format">Avg: %s</string>
    <string name="dart_count_format">Darts: %d</string>
    <string name="optimal_finish_template">Optimal Finish:\n%s</string>

    <!-- LegFinishedDialog -->
    <string name="legFinished">Leg Finished!</string>

    <!-- DoubleAttemptsDialog -->
    <string name="double_attempts_question">How many darts of this serve were attempted double-finishes?</string>
    <string name="double_attempts_explanation">(Used for tracking your double rate)</string>

    <!-- CheckoutDialog -->
    <string name="checkout_question">How many darts did you throw?</string>
    <string name="checkout_explanation">(Used for statistics)</string>

    <!-- ExitTrainingDialog -->
    <string name="exit_dialog_subtitle">The progress will not be saved!</string>
    <string name="exit_dialog_title">Do you really want to exit this Training?</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>

    <!-- StatsFragment -->
    <string name="stats_fragment_label">Stats</string>
    <string name="no_data_short">No data</string>
    <string name="calendar_week_abr">CW</string>


    <!-- HistoryFragment -->
    <string name="average_label">Avg:</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="no_data">No data.\nComplete a training session first!</string>
    <string name="tab_text_1">Graphs</string>
    <string name="tab_text_2">History</string>
    <string name="tab_text_3">Table</string>

    <!-- HistoryDetailsFragment -->
    <string name="average_per_serve_label">Avg. per serve:</string>
    <string name="dart_count_label">Darts:</string>
    <string name="double_quote_label">Double quote:</string>
    <string name="checkout_label">Checkout:</string>
    <string name="header_serve_distr">Serve Distribution</string>
    <string name="header_numbers_and_data">Numbers and Data</string>
    <string name="header_serves_over_time">Serves over time</string>

    <!-- TableFragment -->
    <string name="mode_selection">Mode selection:</string>
    <string name="totals">TOTALS</string>
    <string name="averages">AVERAGES</string>
    <string name="serve_distribution">SERVE DISTRIBUTION</string>


    <!-- Settings -->
    <string name="settings_fragment_label">Settings</string>
    <string name="theme_header">Appearance</string>
    <string name="auto_theme_title">Use system appearance</string>
    <string name="dark_theme_title">Use dark theme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

</resources>